make sure the timeago component does not shrink and wrap

--- a/src/styles/CommentsList.scss
+++ b/src/styles/CommentsList.scss
@@ -64,6 +64,10 @@
   :global(.octicon) {
     color: #d7dee6;
   }
+
+  > span {
+    flex-shrink: 0;
+  }
 }
 
 .eventLabel {
